2001-05-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-fontify-images): Only put text properties `w3m-image'
	and `w3m-image-redundant' if there is a property `w3m-href-anchor'.

2001-05-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-hist.el (w3m-history-tree): New function.

2001-05-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-setup-menu): Don't set up menu if it has already been
	available.

2001-05-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-setup-menu): Locate W3M menu in the forefront of the
	menubar.
	* w3m-xmas.el (w3m-setup-menu): Ditto.

2001-05-08  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-mode): Modify doc-string for describe mode, again.

2001-05-08  Yuuichi Teranishi  <teranisi@gohome.org>

	* shimbun/sb-impress.el (shimbun-get-headers): Remove CRLF characters
	from subject string.

2001-05-08  Akihiro Arisawa  <ari@mbf.sphere.ne.jp>

	* shimbun/sb-hns.el (shimbun-hns-article): Support "RLNEW".
	(shimbun-article): Fixed problem when header contain multibyte string.

2001-05-08  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-form.el (top-level): Modify string to 'iso-2022-7bit' for
	set-auto-coding.
	(w3m-form-make-get-string): Guard error in w3m-url-encode-string()
	reported [emacs-w3m:00686].

2001-05-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-about-history): Run `set-buffer-multibyte' after
	`erase-buffer' is done.

2001-05-07  Yuuichi Teranishi  <teranisi@gohome.org>

	* shimbun/sb-hns.el (shimbun-hns-group-alist): Added X-FACE element.
	(shimbun-article): Use `encode-coding-string' instead of
	`encode-coding-region'.
	(shimbun-x-face): Define.

	* shimbun/shimbun.el (shimbun-header-insert): Use shimbun-x-face
	instead of shimbun-x-face-internal.
	(shimbun-open-group): Don't setup x-face slot.
	(shimbun-x-face): New generic function.
	(shimbun-x-face): Define.

	* shimbun/sb-tcup.el (shimbun-tcup-url): Eliminated.
	(shimbun-tcup-groups): Ditto.
	(shimbun-groups): Define.
